--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "cy:open": "cypress open",
     "cy:open:mobile":"cypress open --config viewportWidth=410 viewportHeight=860",
     "test": "cypress run",
-    "cy:test:mobile":"cypress run --config viewportWidth=410 viewportHeight=860"
+    "cy:test:mobile":"cypress run --config viewportWidth=410 viewportHeight=860",
+    "test:cloud":"cypress run --record"
   },
   "repository": {
     "type": "git",
